--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: CyChecks2
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Examining Pay Patterns across Iowa State University
 Version: 0.1.0
-Author: Who wrote it
+Author: Lydia English and Virginia Nichols
 Maintainer: The package maintainer <yourself@somewhere.net>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
