--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,27 @@
 Package: CyChecks2
-Type: Package
-Title: Examining Pay Patterns across Iowa State University
-Version: 0.1.0
-Author: Lydia English and Virginia Nichols
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Title: What the Package Does (One Line, Title Case)
+Version: 0.0.0.9000
+Authors@R: 
+    c(person(given = "Gina",
+             family = "Nichols",
+             role = c("aut"),
+             email = "virginia.nichols@gmail.com",
+             comment = "0000-0003-1850-8243"),
+      person(given = "Lydia",
+             family = "English",
+             role = c("aut", "cre"),
+             email = "lenglish@iastate.edu"))
+Description: What the package does (one paragraph).
+License: MIT + file LICENSE
 Encoding: UTF-8
+Language: es
 LazyData: true
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.0.2
+Depends: 
+    R (>= 3.2.1)
+Imports: 
+    magrittr,
+    dplyr,
+    tidyr,
+    ggplot2
